PLAT-4153 Fix gap size between label and input in input field.

--- a/src/components/forms/fields/InputField/InputField.module.scss
+++ b/src/components/forms/fields/InputField/InputField.module.scss
@@ -10,10 +10,10 @@
 
     display: flex;
     flex-direction: column;
-    gap: 6px;
+    gap: bk.$spacing-2;
 
     .bk-input-field__label {
-      @include bk.font(bk.$font-family-body, bk.$font-weight-semibold);
+      @include bk.font(bk.$font-family-body, bk.$font-weight-semibold, bk.$font-size-m);
       cursor: default;
     }
 
